# SponzaJump

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
res/assets/debug_model/: debug_model.gltf
res/assets/models/debug_cube/: debug_cube.gltf
res/assets/models/debug_model/: debug_model.gltf  debug_model2.gltf
res/assets/models/debug_model4/: debug_model4.gltf
res/assets/models/levels/: level_0.gltf
res/assets/models/pointlight_model/: pointlight_model.gltf
res/assets/models/scene/: crystalshroom_scene.gltf
res/assets/models/scene2/: playable.gltf
res/assets/textures/cubemap/irradiance/: nx.hdr  ny.hdr  nz.hdr  px.hdr  py.hdr  pz.hdr
res/assets/textures/cubemap/radiance/: source.txt
res/assets/textures/cubemap/radiance/mip0/: nx.hdr  ny.hdr  nz.hdr  px.hdr  py.hdr  pz.hdr
res/assets/textures/cubemap/radiance/mip1/: nx.hdr  ny.hdr  nz.hdr  px.hdr  py.hdr  pz.hdr
res/assets/textures/cubemap/radiance/mip2/: nx.hdr  ny.hdr  nz.hdr  px.hdr  py.hdr  pz.hdr
res/assets/textures/cubemap/radiance/mip3/: nx.hdr  ny.hdr  nz.hdr  px.hdr  py.hdr  pz.hdr
res/assets/textures/cubemap/radiance/mip4/: nx.hdr  ny.hdr  nz.hdr  px.hdr  py.hdr  pz.hdr
res/assets/textures/cubemap/skybox/: nx.hdr  ny.hdr  nz.hdr  px.hdr  py.hdr  pz.hdr
res/shaders/: triangle.vert  triangle_frag.spv  triangle_vert.spv
res/shaders/source/: BRDF.glsl  geometryPass.frag  geometryPass.vert  mainPass.frag  mainPass.vert  pointLights.frag  pointLights.vert  primaryLighting.frag  primaryLighting.vert  shadow.frag  shadow.vert  shadowVis.frag  shadowVis.vert  simpleScene.frag  simpleScene.vert  skybox.frag  skybox.vert  stencil.vert  triangle.vert
res/shaders/spv/: triangle.frag.spv  triangle.vert.spv
src/: main.cpp  window.cpp  window.h
src/game/: PlayerComponent.h
src/input/: CallbackData.h  InputController.cpp  InputController.h
src/physics/: GameContactListener.cpp  GameContactListener.h  PhysicsComponent.h
src/rendering/: CSMUtils.cpp  CSMUtils.h  RenderContext.h  RenderSetup.cpp  RenderSetup.h  RenderSetupDescription.h  RenderUtils.cpp  RenderUtils.h  Shader.cpp  Shader.h  host_device.h
src/scene/: Camera.cpp  Camera.h  Component.cpp  Component.h  Entity.h  LevelData.h  Model.h  ModelLoader.cpp  ModelLoader.h  RenderableObject.cpp  RenderableObject.h  Scene.cpp  Scene.h  SceneData.h  SceneSetup.cpp  SceneSetup.h
src/utils/: FileUtils.cpp  FileUtils.h
src/vulkan/: ApplicationContext.h  BufferImage.cpp  BufferImage.h  VulkanContext.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanSettings.h  VulkanSetup.cpp  VulkanSetup.h  VulkanUtils.cpp  VulkanUtils.h
